--- a/about.html
+++ b/about.html
@@ -164,6 +164,7 @@
             </div>
             <div class="otel-list">
               <div class="otel-card card-flex card-flex-1" data-aos="fade-up">
+                <div class="overlay"></div>
                 <div class="otel-text">
                   <span class="price">$29/night</span>
                   <h3>Luxe Hotel</h3>
@@ -179,6 +180,7 @@
                 </div>
               </div>
               <div class="otel-card card-flex card-flex-2" data-aos="fade-up">
+                <div class="overlay"></div>
                 <div class="otel-text">
                   <span class="price">$29/night</span>
                   <h3>Deluxe Hotel</h3>
@@ -194,6 +196,7 @@
                 </div>
               </div>
               <div class="otel-card card-flex card-flex-3" data-aos="fade-up">
+                <div class="overlay"></div>
                 <div class="otel-text">
                   <span class="price">$29/night</span>
                   <h3>Deluxe Hotel</h3>
@@ -291,7 +294,7 @@
           </div>
           <div class="footer-down-row">
             <p>
-              Copyright © 2022 All rights reserved | This template is made with
+              Copyright © 2022 All rights reserved | Made by Huseyn and Ali
               <i class="fa-solid fa-heart"></i> by
               <a href="https://colorlib.com" target="_blank">Colorlib</a>
             </p>
