--- a/blog.html
+++ b/blog.html
@@ -292,7 +292,7 @@
           </div>
           <div class="footer-down-row">
             <p>
-              Copyright © 2022 All rights reserved | This template is made with
+              Copyright © 2022 All rights reserved | Made by Huseyn and Ali
               <i class="fa-solid fa-heart"></i> by
               <a href="https://colorlib.com" target="_blank">Colorlib</a>
             </p>
