--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
           </div>
           <div class="menu">
             <i class="fa-solid fa-bars"></i>
-            <span>
-              MENU
-            </span>
+            <span> MENU </span>
           </div>
           <div class="navBar-collapse">
             <ul class="navList">
@@ -59,12 +57,12 @@
             </div>
           </div>
           <div class="text">
-            <h3>Welcome to Bon Voyage since 1898 established Far far away.</h3>
+            <h3>Welcome to Bon Voyage since 2023 established Far far away.</h3>
             <p>
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean.
+              The creators are Huseyn and Ali. Far far away, behind the word
+              mountains, far from the countries Vokalia and Consonantia, there
+              live the blind texts. Separated they live in Bookmarksgrove right
+              at the coast of the Semantics, a large language ocean.
             </p>
             <p>
               A small river named Duden flows by their place and supplies it
@@ -190,22 +188,8 @@
           <h2>Most Popular Destination</h2>
         </div>
         <div class="otel-list">
-          <div class="otel-card " data-aos="fade-up">
-            <div class="otel-text">
-              <span class="price">$399</span>
-              <h3>Group Tour in Maldives</h3>
-              <span class="name">Ameeru Ahmed Magu Male, Maldives</span>
-              <p>
-                <span><i class="fa-solid fa-star"></i></span>
-                <span><i class="fa-solid fa-star"></i></span>
-                <span><i class="fa-solid fa-star"></i></span>
-                <span><i class="fa-solid fa-star"></i></span>
-                <span><i class="fa-solid fa-star-half-stroke"></i></span>
-                <span>500 reviews</span>
-              </p>
-            </div>
-          </div>
-          <div class="otel-card " data-aos="fade-up">
+          <div class="otel-card" data-aos="fade-up">
+            <div class="overlay"></div>
             <div class="otel-text">
               <span class="price">$399</span>
               <h3>Group Tour in Maldives</h3>
@@ -221,6 +205,7 @@
             </div>
           </div>
           <div class="otel-card" data-aos="fade-up">
+            <div class="overlay"></div>
             <div class="otel-text">
               <span class="price">$399</span>
               <h3>Group Tour in Maldives</h3>
@@ -236,6 +221,7 @@
             </div>
           </div>
           <div class="otel-card" data-aos="fade-up">
+            <div class="overlay"></div>
             <div class="otel-text">
               <span class="price">$399</span>
               <h3>Group Tour in Maldives</h3>
@@ -251,6 +237,7 @@
             </div>
           </div>
           <div class="otel-card" data-aos="fade-up">
+            <div class="overlay"></div>
             <div class="otel-text">
               <span class="price">$399</span>
               <h3>Group Tour in Maldives</h3>
@@ -266,6 +253,7 @@
             </div>
           </div>
           <div class="otel-card" data-aos="fade-up">
+            <div class="overlay"></div>
             <div class="otel-text">
               <span class="price">$399</span>
               <h3>Group Tour in Maldives</h3>
@@ -281,6 +269,7 @@
             </div>
           </div>
           <div class="otel-card" data-aos="fade-up">
+            <div class="overlay"></div>
             <div class="otel-text">
               <span class="price">$399</span>
               <h3>Group Tour in Maldives</h3>
@@ -296,6 +285,23 @@
             </div>
           </div>
           <div class="otel-card" data-aos="fade-up">
+            <div class="overlay"></div>
+            <div class="otel-text">
+              <span class="price">$399</span>
+              <h3>Group Tour in Maldives</h3>
+              <span class="name">Ameeru Ahmed Magu Male, Maldives</span>
+              <p>
+                <span><i class="fa-solid fa-star"></i></span>
+                <span><i class="fa-solid fa-star"></i></span>
+                <span><i class="fa-solid fa-star"></i></span>
+                <span><i class="fa-solid fa-star"></i></span>
+                <span><i class="fa-solid fa-star-half-stroke"></i></span>
+                <span>500 reviews</span>
+              </p>
+            </div>
+          </div>
+          <div class="otel-card" data-aos="fade-up">
+            <div class="overlay"></div>
             <div class="otel-text">
               <span class="price">$399</span>
               <h3>Group Tour in Maldives</h3>
@@ -397,6 +403,7 @@
             </div>
             <div class="otel-list">
               <div class="otel-card card-flex card-flex-1" data-aos="fade-up">
+                <div class="overlay"></div>
                 <div class="otel-text">
                   <span class="price">$29/night</span>
                   <h3>Luxe Hotel</h3>
@@ -412,6 +419,7 @@
                 </div>
               </div>
               <div class="otel-card card-flex card-flex-2" data-aos="fade-up">
+                <div class="overlay"></div>
                 <div class="otel-text">
                   <span class="price">$29/night</span>
                   <h3>Deluxe Hotel</h3>
@@ -427,6 +435,7 @@
                 </div>
               </div>
               <div class="otel-card card-flex card-flex-3" data-aos="fade-up">
+                <div class="overlay"></div>
                 <div class="otel-text">
                   <span class="price">$29/night</span>
                   <h3>Deluxe Hotel</h3>
@@ -453,9 +462,9 @@
             <h2>Our Blog</h2>
           </div>
           <div class="blog-row" data-aos="fade-up">
-            <div class="blog-card" >
+            <div class="blog-card">
               <div class="blog-img blog-1">
-                <img src="./assets/image/cards/blog-1.webp" alt="blog-image">
+                <img src="./assets/image/cards/blog-1.webp" alt="blog-image" />
               </div>
               <div class="blog-text">
                 <p class="meta"><a href="./blog.html">July 7, 2018 Admin</a></p>
@@ -472,9 +481,9 @@
                 </p>
               </div>
             </div>
-            <div class="blog-card" >
+            <div class="blog-card">
               <div class="blog-img blog-2">
-                <img src="./assets/image/cards/blog-2.webp" alt="blog-image">
+                <img src="./assets/image/cards/blog-2.webp" alt="blog-image" />
               </div>
               <div class="blog-text">
                 <p class="meta"><a href="./blog.html">July 7, 2018 Admin</a></p>
@@ -491,9 +500,9 @@
                 </p>
               </div>
             </div>
-            <div class="blog-card" >
+            <div class="blog-card">
               <div class="blog-img blog-3">
-                <img src="./assets/image/cards/blog-3.webp" alt="blog-image">
+                <img src="./assets/image/cards/blog-3.webp" alt="blog-image" />
               </div>
               <div class="blog-text">
                 <p class="meta"><a href="./blog.html">July 7, 2018 Admin</a></p>
@@ -510,9 +519,9 @@
                 </p>
               </div>
             </div>
-            <div class="blog-card" >
+            <div class="blog-card">
               <div class="blog-img blog-4">
-                <img src="./assets/image/cards/blog-4.webp" alt="blog-image">
+                <img src="./assets/image/cards/blog-4.webp" alt="blog-image" />
               </div>
               <div class="blog-text">
                 <p class="meta"><a href="./blog.html">July 7, 2018 Admin</a></p>
@@ -612,7 +621,7 @@
           </div>
           <div class="footer-down-row">
             <p>
-              Copyright © 2022 All rights reserved | This template is made with
+              Copyright © 2022 All rights reserved | Made by Huseyn and Ali
               <i class="fa-solid fa-heart"></i> by
               <a href="https://colorlib.com" target="_blank">Colorlib</a>
             </p>
