--- a/contact.html
+++ b/contact.html
@@ -61,8 +61,7 @@
               <div class="contact-form">
                 <div class="form-child">
                   <p class="">
-                    <span>Address:</span> 198 West 21th Street, Suite 721 New
-                    York NY 10016
+                    <span>Address:</span> Bakı Mühəndislik Universiteti, Bakı şəhəri
                   </p>
                 </div>
               </div>
@@ -70,7 +69,7 @@
                 <div class="form-child">
                   <p class="">
                     <span>Phone:</span>
-                    <a href="tel://1234567920">+ 1235 2355 98</a>
+                    <a href="tel://1234567920">+ 994 055 492 37 05</a>
                   </p>
                 </div>
               </div>
@@ -85,7 +84,7 @@
               <div class="contact-form">
                 <div class="form-child">
                   <p class="">
-                    <span>Website</span> <a href="#">yoursite.com</a>
+                    <span>Website</span> <a href="#">Voyage.com</a>
                   </p>
                 </div>
               </div>
@@ -239,7 +238,7 @@
           </div>
           <div class="footer-down-row">
             <p>
-              Copyright © 2022 All rights reserved | This template is made with
+              Copyright © 2022 All rights reserved | Made by Huseyn and Ali
               <i class="fa-solid fa-heart"></i> by
               <a href="https://colorlib.com" target="_blank">Colorlib</a>
             </p>
