--- a/hotels.html
+++ b/hotels.html
@@ -60,6 +60,7 @@
             <div class="otel-page-list">
               <div class="otel-card-padding" data-aos="fade-up">
                 <div class="otel-card otel-1">
+                  <div class="overlay"></div>
                   <div class="otel-text">
                     <span class="price">$29/night</span>
                     <h3>Luxe Hotel</h3>
@@ -77,6 +78,7 @@
               </div>
               <div class="otel-card-padding" data-aos="fade-up">
                 <div class="otel-card otel-2">
+                  <div class="overlay"></div>
                   <div class="otel-text">
                     <span class="price">$29/night</span>
                     <h3>Luxe Hotel</h3>
@@ -94,6 +96,7 @@
               </div>
               <div class="otel-card-padding" data-aos="fade-up">
                 <div class="otel-card otel-3">
+                  <div class="overlay"></div>
                   <div class="otel-text">
                     <span class="price">$29/night</span>
                     <h3>Luxe Hotel</h3>
@@ -111,6 +114,7 @@
               </div>
               <div class="otel-card-padding" data-aos="fade-up">
                 <div class="otel-card otel-4">
+                  <div class="overlay"></div>
                   <div class="otel-text">
                     <span class="price">$29/night</span>
                     <h3>Luxe Hotel</h3>
@@ -128,6 +132,7 @@
               </div>
               <div class="otel-card-padding" data-aos="fade-up">
                 <div class="otel-card otel-5">
+                  <div class="overlay"></div>
                   <div class="otel-text">
                     <span class="price">$29/night</span>
                     <h3>Luxe Hotel</h3>
@@ -145,6 +150,7 @@
               </div>
               <div class="otel-card-padding" data-aos="fade-up">
                 <div class="otel-card otel-6">
+                  <div class="overlay"></div>
                   <div class="otel-text">
                     <span class="price">$29/night</span>
                     <h3>Luxe Hotel</h3>
@@ -162,6 +168,7 @@
               </div>
               <div class="otel-card-padding" data-aos="fade-up">
                 <div class="otel-card otel-7">
+                  <div class="overlay"></div>
                   <div class="otel-text">
                     <span class="price">$29/night</span>
                     <h3>Luxe Hotel</h3>
@@ -178,7 +185,8 @@
                 </div>
               </div>
               <div class="otel-card-padding" data-aos="fade-up">
-                <div class="otel-card otel-8"">
+                <div class="otel-card otel-8">
+                  <div class="overlay"></div>
                   <div class="otel-text">
                     <span class="price">$29/night</span>
                     <h3>Luxe Hotel</h3>
@@ -370,7 +378,7 @@
           </div>
           <div class="footer-down-row">
             <p>
-              Copyright © 2022 All rights reserved | This template is made with
+              Copyright © 2022 All rights reserved | Made by Huseyn and Ali
               <i class="fa-solid fa-heart"></i> by
               <a href="https://colorlib.com" target="_blank">Colorlib</a>
             </p>
