--- a/index.html
+++ b/index.html
@@ -14,22 +14,20 @@
       <nav class="navBar">
         <div class="container">
           <div class="logo">
-            <a href="#">Voyage</a>
+            <a href="./index.html">Voyage</a>
           </div>
-          <div class="menu">
+          <div class="menu" id="toggle-btn" onclick="toggleMenu()">
             <i class="fa-solid fa-bars"></i>
             <span> MENU </span>
           </div>
-          <div class="navBar-collapse">
-            <ul class="navList">
-              <li class="navItem"><a href="./index.html">Home</a></li>
-              <li class="navItem"><a href="./hotels.html">Hotels</a></li>
-              <li class="navItem"><a href="./services.html">Services</a></li>
-              <li class="navItem"><a href="./blog.html">Blog</a></li>
-              <li class="navItem"><a href="./about.html">About</a></li>
-              <li class="navItem"><a href="./contact.html">Contact</a></li>
-            </ul>
-          </div>
+          <ul class="navList">
+            <li class="navItem"><a href="./index.html">Home</a></li>
+            <li class="navItem"><a href="./hotels.html">Hotels</a></li>
+            <li class="navItem"><a href="./services.html">Services</a></li>
+            <li class="navItem"><a href="./blog.html">Blog</a></li>
+            <li class="navItem"><a href="./about.html">About</a></li>
+            <li class="navItem"><a href="./contact.html">Contact</a></li>
+          </ul>
         </div>
       </nav>
     </header>
@@ -636,6 +634,7 @@
       src="https://kit.fontawesome.com/063da58797.js"
       crossorigin="anonymous"
     ></script>
+    <script src="./js/toggleMeny.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
