--- a/contact.html
+++ b/contact.html
@@ -252,6 +252,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="./js/toggleMeny.js"></script>
     <script>
       AOS.init();
     </script>
