--- a/hotels.html
+++ b/hotels.html
@@ -392,6 +392,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="./js/toggleMeny.js"></script>
     <script>
       AOS.init();
     </script>
